# libczi_julia

./: .gitignore  CMakeLists.txt  COPYING  GCC12_BUILD.md  PLATFORMS.md  README.md
cmake/zstd/: zstdConfig.cmake
include/: libczi_julia.h
src/: CMakeLists.txt  libczi_julia.cpp  libczi_wrap.cpp
test/: abi_smoke.c  file_smoke.c
yggdrasil/: Manifest.toml  YGGDRASIL.md  build_tarballs.jl
